--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<title>FIGMA | Макеты для верстки — Верстка страницы</title>
 	<meta name="description" content="Макет для верстки сайта был взял с телеграм канала FIGMA | Макеты для верстки">
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 		<!-- Начало: Данный блок удалять нельзя -->
@@ -76,7 +81,192 @@
 		<!-- Конец -->
 
 		<div class="main">
-			В данном блоке размещается верстка
+			<section class="head">
+				<header>
+					<svg class="logo" viewBox="0 0 86 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M16.707 9.41016C16.707 11.4258 16.3477 13.1172 15.6289 14.4844C14.918 15.8438 13.8711 16.8398 12.4883 17.4727L16.6133 22.0781H11.9609L8.82031 18.2344H8.55078C5.92578 18.2344 3.91016 17.4727 2.50391 15.9492C1.09766 14.4258 0.394531 12.2383 0.394531 9.38672C0.394531 6.53516 1.09766 4.35938 2.50391 2.85938C3.91797 1.35156 5.94141 0.597656 8.57422 0.597656C11.207 0.597656 13.2188 1.35547 14.6094 2.87109C16.0078 4.38672 16.707 6.56641 16.707 9.41016ZM4.20312 9.41016C4.20312 11.3242 4.56641 12.7656 5.29297 13.7344C6.01953 14.7031 7.10547 15.1875 8.55078 15.1875C11.4492 15.1875 12.8984 13.2617 12.8984 9.41016C12.8984 5.55078 11.457 3.62109 8.57422 3.62109C7.12891 3.62109 6.03906 4.10938 5.30469 5.08594C4.57031 6.05469 4.20312 7.49609 4.20312 9.41016ZM37.1853 18H33.0486L30.7283 9C30.6423 8.67969 30.4939 8.01953 30.283 7.01953C30.0798 6.01172 29.9627 5.33594 29.9314 4.99219C29.8845 5.41406 29.7673 6.09375 29.5798 7.03125C29.3923 7.96094 29.2478 8.625 29.1462 9.02344L26.8377 18H22.7127L18.3416 0.867188H21.9158L24.1072 10.2188C24.49 11.9453 24.7673 13.4414 24.9392 14.707C24.9861 14.2617 25.0916 13.5742 25.2556 12.6445C25.4275 11.707 25.5877 10.9805 25.7361 10.4648L28.2322 0.867188H31.6658L34.1619 10.4648C34.2712 10.8945 34.408 11.5508 34.572 12.4336C34.7361 13.3164 34.8611 14.0742 34.947 14.707C35.0252 14.0977 35.1502 13.3398 35.322 12.4336C35.4939 11.5195 35.6502 10.7812 35.7908 10.2188L37.9705 0.867188H41.5447L37.1853 18ZM53.8081 18H43.9409V0.867188H53.8081V3.84375H47.5737V7.60547H53.3745V10.582H47.5737V15H53.8081V18ZM61.2669 8.47266H62.4388C63.5872 8.47266 64.4348 8.28125 64.9817 7.89844C65.5286 7.51562 65.802 6.91406 65.802 6.09375C65.802 5.28125 65.5208 4.70312 64.9583 4.35938C64.4036 4.01562 63.5403 3.84375 62.3684 3.84375H61.2669V8.47266ZM61.2669 11.4258V18H57.6341V0.867188H62.6263C64.9544 0.867188 66.677 1.29297 67.7942 2.14453C68.9114 2.98828 69.47 4.27344 69.47 6C69.47 7.00781 69.1927 7.90625 68.638 8.69531C68.0833 9.47656 67.2981 10.0898 66.2825 10.5352C68.8606 14.3867 70.5403 16.875 71.3216 18H67.2903L63.2005 11.4258H61.2669ZM71.5616 4.89844H75.4756L77.9483 12.2695C78.1592 12.9102 78.3037 13.668 78.3819 14.543H78.4522C78.5381 13.7383 78.7061 12.9805 78.9561 12.2695L81.3819 4.89844H85.2139L79.6709 19.6758C79.1631 21.043 78.4366 22.0664 77.4912 22.7461C76.5537 23.4258 75.4561 23.7656 74.1983 23.7656C73.5811 23.7656 72.9756 23.6992 72.3819 23.5664V20.7305C72.8116 20.832 73.2803 20.8828 73.7881 20.8828C74.4209 20.8828 74.9717 20.6875 75.4405 20.2969C75.917 19.9141 76.2881 19.332 76.5537 18.5508L76.7647 17.9062L71.5616 4.89844Z" fill="white"/>
+					</svg>
+					<nav>
+						<ul>
+							<li><a href="#">Information</a> </li>
+							<li><a href="#">About us</a></li>
+							<li><a href="#">Culture</a></li>
+						</ul>
+					</nav>
+					<div class="search">
+						<svg  viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M13.564 14.3392L8.80149 9.57585C6.68288 11.0821 3.76352 10.7136 2.08555 8.72829C0.407578 6.74294 0.530787 3.80301 2.36899 1.96502C4.2067 0.126223 7.14693 0.00248128 9.13264 1.68036C11.1184 3.35825 11.487 6.27789 9.98065 8.39668L14.7432 13.16L13.5648 14.3384L13.564 14.3392ZM5.90399 2.16667C4.32374 2.16632 2.9604 3.27558 2.63938 4.82288C2.31837 6.37018 3.12791 7.93024 4.57788 8.55855C6.02786 9.18685 7.71974 8.71071 8.62919 7.41839C9.53864 6.12608 9.41571 4.37278 8.33482 3.22002L8.83899 3.72002L8.27065 3.15335L8.26065 3.14335C7.63714 2.516 6.78848 2.16429 5.90399 2.16667Z" fill="white"/>
+						</svg>
+						<p class="search">Search</p>
+					</div>
+				</header>
+				<div class="central-content">
+					<div class="social-media">
+						<p>Follow</p>
+						<p class="us">us</p>
+						<a href="#">
+							<svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M5.8 3.05176e-05H14.2C17.4032 3.05176e-05 20 2.59678 20 5.80003V14.2C20 17.4033 17.4032 20 14.2 20H5.8C2.59675 20 0 17.4033 0 14.2V5.80003C0 2.59678 2.59675 3.05176e-05 5.8 3.05176e-05ZM5.6 2.00001C3.61177 2.00001 2 3.61179 2 5.60001V14.4C2 16.3882 3.61177 18 5.6 18H14.4C16.3882 18 18 16.3882 18 14.4V5.60001C18 3.61179 16.3882 2.00001 14.4 2.00001H5.6ZM15.25 3.50001C15.9404 3.50001 16.5 4.05966 16.5 4.75001C16.5 5.44037 15.9404 6.00001 15.25 6.00001C14.5596 6.00001 14 5.44037 14 4.75001C14 4.05966 14.5596 3.50001 15.25 3.50001ZM10 5.00001C12.7614 5.00001 15 7.23859 15 10C15 12.7614 12.7614 15 10 15C7.23857 15 5 12.7614 5 10C5 7.23859 7.23857 5.00001 10 5.00001ZM10 7.00001C8.3431 7.00001 7 8.34321 7 10C7 11.6569 8.3431 13 10 13C11.6569 13 13 11.6569 13 10C13 8.34321 11.6569 7.00001 10 7.00001Z" fill="white"/>
+							</svg>
+						</a>
+						<a href="#">
+							<svg viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M20.9184 2.01238C20.1488 2.35373 19.3216 2.58442 18.4536 2.68815C19.3395 2.15701 20.0201 1.31598 20.3405 0.31378C19.5112 0.80564 18.5928 1.16278 17.6152 1.3552C16.8324 0.52112 15.7171 0 14.4827 0C12.1126 0 10.1909 1.92147 10.1909 4.29155C10.1909 4.6279 10.2289 4.95546 10.3021 5.2696C6.73532 5.0906 3.57298 3.38203 1.45632 0.78551C1.08688 1.41935 0.87524 2.15656 0.87524 2.94309C0.87524 4.43204 1.63287 5.74563 2.78446 6.5153C2.08102 6.4929 1.41919 6.2999 0.84062 5.97846C0.84021 5.99639 0.84021 6.0143 0.84021 6.0324C0.84021 8.1118 2.31956 9.8463 4.28282 10.2406C3.92272 10.3387 3.54357 10.3912 3.15217 10.3912C2.87563 10.3912 2.60678 10.3642 2.34469 10.3142C2.89084 12.0191 4.47576 13.26 6.35377 13.2945C4.88499 14.4457 3.0345 15.1318 1.02376 15.1318C0.67735 15.1318 0.33574 15.1114 0 15.0717C1.89926 16.2894 4.15514 17 6.57873 17C14.4726 17 18.7894 10.4605 18.7894 4.78918C18.7894 4.60314 18.7852 4.41805 18.7769 4.23395C19.6155 3.62886 20.3431 2.87302 20.9184 2.01238Z" fill="white"/>
+							</svg>
+						</a>
+						<a href="#">
+							<svg viewBox="0 0 11 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M8.99175 3.81896H11V0.161958C10.6535 0.112125 9.46196 0 8.07424 0C5.17873 0 3.19523 1.90421 3.19523 5.40404V8.625H0V12.7132H3.19523V23H7.11274V12.7142H10.1787L10.6654 8.62596H7.11182V5.80942C7.11274 4.62779 7.41705 3.81896 8.99175 3.81896Z" fill="white"/>
+							</svg>
+						</a>
+					</div>
+					<div class="main-content">
+						<div class="central-text">
+							<p>explore the Nature Beauty</p>
+							<h1>Discover <br> <span>Wonderful Indonesia</span></h1>
+						</div>
+						<div class="scroll">
+							<p>Scroll down</p>
+							<svg  viewBox="0 0 16 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16 16L14.59 14.59L9 20.17V0H7V20.17L1.42 14.58L0 16L8 24L16 16Z" fill="white"/>
+							</svg>
+						</div>	
+					</div>
+				</div>
+			</section>
+			<div class="container">
+				<section class="komodo">
+					<img src="./images/komodo.png" alt="watesr inside the mountains Komodo island with a girl on a rock">
+					<div class="komodo-content">
+						<p class="east">EAST NUSA TENGGARA</p>
+						<h3>Have you enjoyed your holiday?</h3>
+						<p class="komodo-description">You will be amazed if you take part in this sailing Komodo island tour package.
+							So it is also mandatory for you, besides enjoying Komodo tourism on Komodo Island,
+							you also have to taste the marine tourism.  The beautiful waters of Komodo will make
+							you meet many travelers from other countries.</p>
+						<div class="read-more">
+							<a href="#">read more</a>
+							<svg  viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16.5 -6.99382e-07L15.09 1.41L20.67 7L0.5 7L0.5 9L20.67 9L15.08 14.58L16.5 16L24.5 8L16.5 -6.99382e-07Z" fill="#FBD784"/>
+							</svg>
+						</div>	
+					</div>
+				</section>
+				<section class="bromo">
+					<div class="arrows">
+						<button class="left-arrow">
+							<svg viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M10.5813 25.6062L21.1875 15L10.5813 4.3937L8.8125 6.1612L17.6525 15L8.8125 23.8387L10.5813 25.6062Z" fill="white"/>
+							</svg>
+						</button>
+						<button class="right-arrow">
+							<svg viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M10.5813 25.6062L21.1875 15L10.5813 4.3937L8.8125 6.1612L17.6525 15L8.8125 23.8387L10.5813 25.6062Z" fill="white"/>
+							</svg>
+						</button>
+					</div>
+					<div class="bromo-content">
+						<p class="bromo-title">Bromo</p>
+						<h3>Steady your steps, we will climb together!</h3>
+						<p class="bromo-description">Enjoying the vast expanse of the sea of ​​​​sand, witnessing the splendor of Mount Semeru
+						that soars into the sky, and gazing at the beauty of the sun moving out of its bed or otherwise
+						enjoying the dim twilight from the Bromo ridge is an unforgettable experience when visiting Bromo.
+						</p>
+						<div class="read-more">
+							<a href="#">read more</a>
+							<svg  viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16.5 -6.99382e-07L15.09 1.41L20.67 7L0.5 7L0.5 9L20.67 9L15.08 14.58L16.5 16L24.5 8L16.5 -6.99382e-07Z" fill="#FBD784"/>
+							</svg>
+						</div>
+					</div>
+				</section>
+				<section class="culture">
+					<div class="culture-content">
+						<p class="east">Indonesian culture</p>
+						<h3>Our culture here is very friendly to people</h3>
+						<p class="culture-description">known for his politeness, manners and gentleness.
+													 This becomes a characteristic when they mingle with other tribes and become basic traits
+													  that are passed down by their ancestors.
+						</p>
+						<div class="read-more">
+							<a href="#">read more</a>
+							<svg  viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16.5 -6.99382e-07L15.09 1.41L20.67 7L0.5 7L0.5 9L20.67 9L15.08 14.58L16.5 16L24.5 8L16.5 -6.99382e-07Z" fill="#FBD784"/>
+							</svg>
+						</div>	
+					</div>
+					<img src="./images/culture.png" alt="">
+				</section>
+				<footer>
+					<div class="first-row">
+						<svg class="footer-logo" viewBox="0 0 86 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M16.707 9.41016C16.707 11.4258 16.3477 13.1172 15.6289 14.4844C14.918 15.8438 13.8711 16.8398 12.4883 17.4727L16.6133 22.0781H11.9609L8.82031 18.2344H8.55078C5.92578 18.2344 3.91016 17.4727 2.50391 15.9492C1.09766 14.4258 0.394531 12.2383 0.394531 9.38672C0.394531 6.53516 1.09766 4.35938 2.50391 2.85938C3.91797 1.35156 5.94141 0.597656 8.57422 0.597656C11.207 0.597656 13.2188 1.35547 14.6094 2.87109C16.0078 4.38672 16.707 6.56641 16.707 9.41016ZM4.20312 9.41016C4.20312 11.3242 4.56641 12.7656 5.29297 13.7344C6.01953 14.7031 7.10547 15.1875 8.55078 15.1875C11.4492 15.1875 12.8984 13.2617 12.8984 9.41016C12.8984 5.55078 11.457 3.62109 8.57422 3.62109C7.12891 3.62109 6.03906 4.10938 5.30469 5.08594C4.57031 6.05469 4.20312 7.49609 4.20312 9.41016ZM37.1853 18H33.0486L30.7283 9C30.6423 8.67969 30.4939 8.01953 30.283 7.01953C30.0798 6.01172 29.9627 5.33594 29.9314 4.99219C29.8845 5.41406 29.7673 6.09375 29.5798 7.03125C29.3923 7.96094 29.2478 8.625 29.1462 9.02344L26.8377 18H22.7127L18.3416 0.867188H21.9158L24.1072 10.2188C24.49 11.9453 24.7673 13.4414 24.9392 14.707C24.9861 14.2617 25.0916 13.5742 25.2556 12.6445C25.4275 11.707 25.5877 10.9805 25.7361 10.4648L28.2322 0.867188H31.6658L34.1619 10.4648C34.2712 10.8945 34.408 11.5508 34.572 12.4336C34.7361 13.3164 34.8611 14.0742 34.947 14.707C35.0252 14.0977 35.1502 13.3398 35.322 12.4336C35.4939 11.5195 35.6502 10.7812 35.7908 10.2188L37.9705 0.867188H41.5447L37.1853 18ZM53.8081 18H43.9409V0.867188H53.8081V3.84375H47.5737V7.60547H53.3745V10.582H47.5737V15H53.8081V18ZM61.2669 8.47266H62.4388C63.5872 8.47266 64.4348 8.28125 64.9817 7.89844C65.5286 7.51562 65.802 6.91406 65.802 6.09375C65.802 5.28125 65.5208 4.70312 64.9583 4.35938C64.4036 4.01562 63.5403 3.84375 62.3684 3.84375H61.2669V8.47266ZM61.2669 11.4258V18H57.6341V0.867188H62.6263C64.9544 0.867188 66.677 1.29297 67.7942 2.14453C68.9114 2.98828 69.47 4.27344 69.47 6C69.47 7.00781 69.1927 7.90625 68.638 8.69531C68.0833 9.47656 67.2981 10.0898 66.2825 10.5352C68.8606 14.3867 70.5403 16.875 71.3216 18H67.2903L63.2005 11.4258H61.2669ZM71.5616 4.89844H75.4756L77.9483 12.2695C78.1592 12.9102 78.3037 13.668 78.3819 14.543H78.4522C78.5381 13.7383 78.7061 12.9805 78.9561 12.2695L81.3819 4.89844H85.2139L79.6709 19.6758C79.1631 21.043 78.4366 22.0664 77.4912 22.7461C76.5537 23.4258 75.4561 23.7656 74.1983 23.7656C73.5811 23.7656 72.9756 23.6992 72.3819 23.5664V20.7305C72.8116 20.832 73.2803 20.8828 73.7881 20.8828C74.4209 20.8828 74.9717 20.6875 75.4405 20.2969C75.917 19.9141 76.2881 19.332 76.5537 18.5508L76.7647 17.9062L71.5616 4.89844Z" fill="white"/>
+						</svg>
+						<div class="explore">
+							<p>Ready to explore?</p>
+							<button class="start">Get started</button>
+						</div>
+					</div>
+					<div class="second-row">
+						<div class="subscribe">
+							<h3>Let's go on vacation, Make your day</h3>
+							<div class="form">
+								<input type="email" placeholder="Email adress">
+									<button class="submit">
+										<svg  viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M0.172119 12.2831L5.45525 7L0.172119 1.71688L1.80257 0.0864258L8.71616 7L1.80257 13.9136L0.172119 12.2831Z" fill="black"/>
+										</svg>
+									</button>
+							</div>
+						</div>
+						<div class="links">
+							<div class="services">
+								<a href="#">Services</a>
+								<a href="#">Email Marketing</a>
+								<a href="#">Campaigns</a>
+								<a href="#">Branding</a>
+								<a href="#">Offline</a>
+							</div>
+							<div class="about">
+								<a href="#">About</a>
+								<a href="#">Our Story</a>
+								<a href="#">Benefits</a>
+								<a href="#">Team</a>
+								<a href="#">Careers</a>
+							</div>
+							<div class="help">
+								<a href="#">Help</a>
+								<a href="#">FAQs</a>
+								<a href="#">Contact Us</a>
+							</div>
+						</div>
+					</div>
+					<div class="third-row">
+						<div class="rules">
+							<a href="#">Terms & Conditions</a>
+							<a href="#">Privacy Policy</a>
+						</div>
+						<div class="footer-social">
+							<a href="#">
+								<svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M5.8 3.05176e-05H14.2C17.4032 3.05176e-05 20 2.59678 20 5.80003V14.2C20 17.4033 17.4032 20 14.2 20H5.8C2.59675 20 0 17.4033 0 14.2V5.80003C0 2.59678 2.59675 3.05176e-05 5.8 3.05176e-05ZM5.6 2.00001C3.61177 2.00001 2 3.61179 2 5.60001V14.4C2 16.3882 3.61177 18 5.6 18H14.4C16.3882 18 18 16.3882 18 14.4V5.60001C18 3.61179 16.3882 2.00001 14.4 2.00001H5.6ZM15.25 3.50001C15.9404 3.50001 16.5 4.05966 16.5 4.75001C16.5 5.44037 15.9404 6.00001 15.25 6.00001C14.5596 6.00001 14 5.44037 14 4.75001C14 4.05966 14.5596 3.50001 15.25 3.50001ZM10 5.00001C12.7614 5.00001 15 7.23859 15 10C15 12.7614 12.7614 15 10 15C7.23857 15 5 12.7614 5 10C5 7.23859 7.23857 5.00001 10 5.00001ZM10 7.00001C8.3431 7.00001 7 8.34321 7 10C7 11.6569 8.3431 13 10 13C11.6569 13 13 11.6569 13 10C13 8.34321 11.6569 7.00001 10 7.00001Z" fill="white"/>
+								</svg>
+							</a>
+							<a href="#">
+								<svg viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M20.9184 2.01238C20.1488 2.35373 19.3216 2.58442 18.4536 2.68815C19.3395 2.15701 20.0201 1.31598 20.3405 0.31378C19.5112 0.80564 18.5928 1.16278 17.6152 1.3552C16.8324 0.52112 15.7171 0 14.4827 0C12.1126 0 10.1909 1.92147 10.1909 4.29155C10.1909 4.6279 10.2289 4.95546 10.3021 5.2696C6.73532 5.0906 3.57298 3.38203 1.45632 0.78551C1.08688 1.41935 0.87524 2.15656 0.87524 2.94309C0.87524 4.43204 1.63287 5.74563 2.78446 6.5153C2.08102 6.4929 1.41919 6.2999 0.84062 5.97846C0.84021 5.99639 0.84021 6.0143 0.84021 6.0324C0.84021 8.1118 2.31956 9.8463 4.28282 10.2406C3.92272 10.3387 3.54357 10.3912 3.15217 10.3912C2.87563 10.3912 2.60678 10.3642 2.34469 10.3142C2.89084 12.0191 4.47576 13.26 6.35377 13.2945C4.88499 14.4457 3.0345 15.1318 1.02376 15.1318C0.67735 15.1318 0.33574 15.1114 0 15.0717C1.89926 16.2894 4.15514 17 6.57873 17C14.4726 17 18.7894 10.4605 18.7894 4.78918C18.7894 4.60314 18.7852 4.41805 18.7769 4.23395C19.6155 3.62886 20.3431 2.87302 20.9184 2.01238Z" fill="white"/>
+								</svg>
+							</a>
+							<a href="#">
+								<svg viewBox="0 0 11 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M8.99175 3.81896H11V0.161958C10.6535 0.112125 9.46196 0 8.07424 0C5.17873 0 3.19523 1.90421 3.19523 5.40404V8.625H0V12.7132H3.19523V23H7.11274V12.7142H10.1787L10.6654 8.62596H7.11182V5.80942C7.11274 4.62779 7.41705 3.81896 8.99175 3.81896Z" fill="white"/>
+								</svg>
+							</a>
+						</div>
+					</div>
+					<span>Copyright 2021 QWERy</span>
+				</footer>
+			</div>
 		</div>
 </body>
 </html>
